# CSharpCppMixedProject

./: .gitignore  readme.md
managed/: .gitignore  AetherExample.sln
managed/AetherExample/: AetherExample.csproj  NativeCode.cs  Program.cs
native/: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  cmake-format.json
native/cmake/: default_visibility.cmake  developer_mode.cmake  install_structure.cmake  installation.cmake  output_structure.cmake  packaging.cmake
native/cmake/compiler_flags/: cxx_iso_flags.cmake  cxx_standard.cmake  ipo_support.cmake
native/dependencies/: CMakeLists.txt
native/lib/: CMakeLists.txt
native/lib/include/: CMakeLists.txt
native/lib/include/aether/: CMakeLists.txt  aether.h  aether.hpp
native/lib/src/: CMakeLists.txt  aether.cpp
